# Numerical-Methods-Toolkit

./: CMakeLists.txt  README.md  cMakeLists.txt  pyproject.toml
frontend/: pubspec.yaml
frontend/web/: index.html  main.dart
include/nmtk/: __init__.py  linearalgebra.hpp  ode.hpp  root.hpp
python/nmtk/: __init__.py
src/: linear algebra.cpp  linearalgebra.cpp  ode.cpp  pybind_module.cpp  root.cpp
